2009-05-22 S*STORE now return the cardinality of the resulting set
2009-05-22 rubyredis more compatible with Redis-rb
2009-05-21 minor indentation fix
2009-05-21 timeout support and Redis-rb compatibility aliases implemented in RubyRedis
2009-05-21 RubyRedis info postprocessor rewritten in a more functional way
2009-05-21 dead code removed from RubyRedis
2009-05-21 command postprocessing implemented into RubyRedis
2009-05-20 Automagically reconnection of RubyRedis
2009-05-20 RubyRedis: Array alike operators implemented
2009-05-20 random testing code removed
2009-05-20 RubyRedis DB selection forced at object creation
2009-05-20 Initial version of an alternative Ruby client added
2009-05-20 SDIFF / SDIFFSTORE added to doc
2009-05-20 Aman Gupta changes merged
2009-05-20 Merge git://github.com/tmm1/redis
2009-05-19 Allow timeout=0 config to disable client timeouts
2009-05-19 Partial qsort implemented in SORT command, only when both BY and LIMIT is used. minor fix for a warning compiling under Linux.
2009-05-19 psort.c/h added. This is a partial qsort implementation that Redis will use when SORT+LIMIT is requested
2009-05-17 Fix SINTER/UNIONSTORE to allow for &=/|= style operations (i.e. SINTERSTORE set1 set1 set2)
2009-05-17 Optimize SDIFF to return as soon as the result set is empty
2009-05-17 SDIFF/SDIFFSTORE implemnted unifying it with the implementation of SUNION/SUNIONSTORE
2009-05-11 timestamp in log lines
2009-05-11 Python client updated pushing from Ludo's repository
2009-05-11 disconnect when we cannot read from the socket
2009-05-11 benchmark utility now supports random keys
2009-05-10 minor doc changes
2009-05-09 added tests for vararg DEL
2009-05-09 DEL is now a vararg, IMPORTANT: memory leak fixed in loading DB code
2009-05-09 doc changes
2009-05-09 CPP client added thanks to Brian Hammond
2009-05-06 Infinite number of arguments for MGET and all the other commands